--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,26 +1,11 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-a {
-  color: inherit;
-  text-decoration: none;
+*>*{
+    font-family: 'Poppins', sans-serif;
 }
-
-* {
-  box-sizing: border-box;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-  body {
-    color: white;
-    background: black;
-  }
+.Input_box-style{
+    @apply mt-1 block rounded-full  px-3 py-1 w-60 bg-white text-sm shadow-sm placeholder-slate-500  focus:outline-none focus:border-sky-500 focus:ring-1 focus:ring-sky-500;
 }
